--- a/package.json
+++ b/package.json
@@ -5,5 +5,5 @@
   "main": "index.js",
   "repository": "git@github.com:vporton/clarity-static.git",
   "author": "Victor Porton <porton@narod.ru>",
-  "license": "GPLv3"
+  "license": "GPL-3.0-or-later"
 }
